--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -48,7 +48,7 @@
         <a href="/listings/<%= listing._id %>" class="listing-link">
             <div class="col">
         
-        <div class="card col">
+        <div class="card col listing-card">
           <img 
   src="<%= listing.image?.url || 'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee' %>"
   class="card-img-top"
