--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,9 +4,9 @@
 
     <div class="row mt-3">
         <div class="col-8 offset-3 mt-3">
-          <h2>lising details</h2>
+          <h2><%= listing.title %></h2>
         </div>
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
                  
       <img 
   src="<%= listing.image?.url || 'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee' %>"
@@ -19,8 +19,8 @@
 
 
         <div class="card-body">
-          <p class="card-text mt-3"><b><%= listing.title %></b>
-            <br>
+          <p class="card-text mt-3">
+            
           Description: <%= listing.description %><br>
           Price:
                         <% if (listing.price != null) { %>
@@ -51,7 +51,7 @@
     </ul> -->
 
     <div class="btns">
-       <a href="/listings/<%=listing.id_%>/edit" class="btn btn-dark add-btn col-1 offset-3">Edit </a>
+       <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark add-btn col-1 offset-3">Edit </a>
     
      
           <form method="post" action="/listings/<%= listing._id%>?_method=DELETE" >
@@ -60,7 +60,46 @@
     </div>
     
 
-   <!-- <button><a href="/listings">back to listings</a></button> -->
+  <div class="col-8 offset-3 mb-3">
+    <hr>
+    <h4>Leave a Review</h4>
+    <form action="/listings/<%=listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label" >Rating</label>
+        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comment</label>
+        
+          
+        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+        <div class="invalid-feedback">please add the review for god sake</div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+
+    <hr>
+
+    <h4><b>All Reviews</b></h4>
+
+    <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+      <% for(review of listing.reviews){ %>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Rating: <%=review.rating%> ⭐</h5>
+              <p class="card-text"><%=review.comment%></p>
+              <!-- <p class="card-text"><small class="text-muted">Posted on <%=review.createdAt ? new Date(review.createdAt).toLocaleDateString() : 'Recently'%></small></p> -->
+            </div>
+            <form class="mb-3 ms-1 mt-2" method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
+              <button class="btn btn-sm btn-dark">Delete</button>
+            </form>
+          </div>
+        </div>
+      <% } %>
+    </div>
+    
+  </div>
 </body>
 
 </div>
